--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "webpack": "webpack --watch",
-    "start": "http-server ./ -o"
+    "start": "http-server ./ -o -H 'Cache-Control: no-store'"
   },
   "keywords": [],
   "author": "",
