--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "rxjs": "^7.8.0"
   }
 }
