--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/three": "^0.149.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.1",
     "http-server": "^14.1.1",
+    "json-loader": "^0.5.7",
+    "style-loader": "^3.3.2",
     "three": "^0.150.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
