--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
       "target": "es5",
       "module": "commonjs",
       "sourceMap": true,
-      "outDir": "dist"
+      "outDir": "dist",
+      "resolveJsonModule": true,
+      "esModuleInterop": true,
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules"]
