--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack --watch",
-    "start": "http-server ./ -o -H 'Cache-Control: no-store'"
+    "build watch": "webpack --watch",
+    "build": "webpack",
+    "start": "http-server dist -o -H 'Cache-Control: no-store'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/three": "^0.149.0",
-    "http-server": "^14.1.1",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.1",
+    "style-loader": "^3.3.2",
     "three": "^0.150.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
